monkey-c-formatter/tests/snapshots/snapshots__new_expression_with_self_reference.snap
---
source: monkey-c-formatter/tests/snapshots.rs
expression: "format(\"function f() { return new self.classDef_(); }\")"
---
function f() {
    return new self.classDef_();
}
