monkey-c-formatter/tests/snapshots/snapshots__new_expression_without_parens.snap
---
source: monkey-c-formatter/tests/snapshots.rs
expression: "format(\"function f() { var x = new MyModule.Foo; }\")"
---
function f() {
    var x = new MyModule.Foo();
}
