monkey-c-formatter/tests/snapshots/snapshots__parens_preserved.snap
---
source: tests/snapshots.rs
expression: "format(r#\"\nfunction f() {\n    var required = (a + b) * c;\n    var redundant = (a - b) - c;\n    var nested = (((a.b) * 91 / 360) * c);\n}\n\"#.trim())"
---
function f() {
    var required = (a + b) * c;
    var redundant = (a - b) - c;
    var nested = (((a.b) * 91 / 360) * c);
}
