monkey-c-formatter/tests/snapshots/snapshots__resource_ref.snap
---
source: monkey-c-formatter/tests/snapshots.rs
expression: "format(\"function f() { statusLabel.setText(@Rez.Strings.cpr_string); }\")"
---
function f() {
    statusLabel.setText(@Rez.Strings.cpr_string);
}
