monkey-c-formatter/tests/snapshots/snapshots__return_with_expression.snap
---
source: tests/snapshots.rs
expression: "format(\"function f() { return x + 1; }\")"
---
function f() {
    return x + 1;
}
