monkey-c-formatter/tests/snapshots/snapshots__sole_array_argument_breaks_around_brackets_by_default.snap
---
source: monkey-c-formatter/tests/snapshots.rs
expression: "format_width(SOLE_ARRAY_ARGUMENT.trim(), 20)"
---
function fn() {
    someFn(
        [
            "foo",
            "bar",
            "baz"
        ]
    );
    var x = new Foo(
        [
            "foo",
            "bar",
            "baz"
        ]
    );
}
