monkey-c-formatter/tests/snapshots/snapshots__sole_array_argument_hugs_brackets.snap
---
source: monkey-c-formatter/tests/snapshots.rs
expression: "format_hugged_width(SOLE_ARRAY_ARGUMENT.trim(), 20)"
---
function fn() {
    someFn([
        "foo",
        "bar",
        "baz"
    ]);
    var x = new Foo([
        "foo",
        "bar",
        "baz"
    ]);
}
