monkey-c-formatter/tests/snapshots/snapshots__switch_discriminant_wraps_when_long.snap
---
source: tests/snapshots.rs
expression: "format_width(\"function f() { switch (computeLong() + somethingElseLong) { case 1: foo(); } }\",\n40,)"
---
function f() {
    switch (computeLong()
        + somethingElseLong)
    {
        case 1:
            foo();
    }
}
