monkey-c-formatter/tests/snapshots/snapshots__switch_variants.snap
---
source: monkey-c-formatter/tests/snapshots.rs
expression: "format(r#\"\nfunction basic(x) { switch (x) { case 1: foo(); break; case 2: bar(); break; default: baz(); } }\nfunction instance_case(p) { switch (p) { case instanceof Number: ok(); break; default: bad(); } }\nfunction fall_through(x) { switch (x) { case 1: foo(); case 2: bar(); break; } }\n\"#.trim())"
---
function basic(x) {
    switch (x) {
        case 1:
            foo();
            break;
        case 2:
            bar();
            break;
        default:
            baz();
    }
}

function instance_case(p) {
    switch (p) {
        case instanceof Number:
            ok();
            break;
        default:
            bad();
    }
}

function fall_through(x) {
    switch (x) {
        case 1:
            foo();
        case 2:
            bar();
            break;
    }
}
