monkey-c-formatter/tests/snapshots/snapshots__symbol_literal.snap
---
source: monkey-c-formatter/tests/snapshots.rs
expression: "format(\"var a = :mySymbol;\")"
---
var a = :mySymbol;
